<?xml version="1.0" encoding="UTF-8"?><project>
  <modelVersion>4.0.0</modelVersion>
  <groupId>group3.component</groupId>
  <artifactId>AdminApplication</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>AdminApplication</name>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.9</maven.compiler.source>
    <maven.compiler.target>1.9</maven.compiler.target>
    <javafx.version>21</javafx.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-controls</artifactId>
        <version>21.0.2</version>
      </dependency>
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-graphics</artifactId>
        <version>21.0.2</version>
      </dependency>
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-base</artifactId>
        <version>21.0.2</version>
      </dependency>
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-fxml</artifactId>
        <version>21.0.2</version>
      </dependency>
      <!-- Internal Project Dependencies -->
    </dependencies>
  </dependencyManagement>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-clean-plugin</artifactId>
        <version>3.2.0</version>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <fork>true</fork>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.8</version>
        <configuration>
          <mainClass>group3.component.Navigation</mainClass>
        </configuration>
      </plugin>
      <plugin>
        <groupId>kr.motd.maven</groupId>
        <artifactId>os-maven-plugin</artifactId>
        <version>1.7.0</version>
        <executions>
          <execution>
            <goals>
              <goal>detect</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>1.6.0</version>
        <inherited>false</inherited>
        <executions>
          <execution>
            <goals>
              <goal>exec</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <executable>java</executable>
          <workingDirectory>.</workingDirectory>
          <longModulepath>false</longModulepath>
          <arguments>
            <!--
                                    On Mac Devices this line should not be commented out
                                    <argument>-XstartOnFirstThread</argument>
            -->
            <!--                        <argument>-Dorg.lwjgl.util.Debug=true</argument>-->
            <argument>-Djava.library.path=libs</argument>
            <argument>--module-path=mods-mvn</argument>
            <argument>--class-path=libs/*</argument>
            <!-- because spark.core is an automatic module and actually required,
            monitor.observer.zero would be resolved as well and does not need
            to be added explicitly;
            I still wanted to do it for clarity, but for some reason that results
            in "java.lang.module.FindException: Module monitor.observer.zero not found";
            strange... -->
            <!--                        <argument>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=127.0.0.1:8000</argument>-->
            <argument>--module=Core/group3.component.Navigation</argument>
            <argument>--add-modules javafx.graphics</argument>
          </arguments>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>parent-project</id>
      <activation>
        <file>
          <missing>src</missing>
        </file>
      </activation>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-clean-plugin</artifactId>
            <version>3.2.0</version>
            <configuration>
              <filesets>
                <fileset>
                  <directory>mods-mvn</directory>
                </fileset>
                <fileset>
                  <directory>libs</directory>
                </fileset>
              </filesets>
            </configuration>
          </plugin>
        </plugins>
      </build>
      <properties>
        <os.detected.classifier>win</os.detected.classifier> <!-- or linux/mac -->
      </properties>
    </profile>
    <profile>
      <id>child-project</id>
      <activation>
        <file>
          <exists>src</exists>
        </file>
      </activation>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-dependency-plugin</artifactId>
            <version>3.0.2</version>
            <executions>
              <execution>
                <id>copy-installed</id>
                <phase>install</phase>
                <goals>
                  <goal>copy</goal>
                </goals>
                <configuration>
                  <artifactItems>
                    <artifactItem>
                      <groupId>${project.groupId}</groupId>
                      <artifactId>${project.artifactId}</artifactId>
                      <version>${project.version}</version>
                      <type>jar</type>
                    </artifactItem>
                  </artifactItems>
                  <outputDirectory>../mods-mvn</outputDirectory>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
  <modules>
    <module>Core</module>
    <module>StorageGUI</module>
    <module>AGVGUI</module>
    <module>InstructionSequence</module>
    <module>APIHandler</module>
    <module>Common</module>
    <module>CommonInstructionSequence</module>
    <module>CommonAPI</module>
  </modules>
</project>
